import type { Attachment } from '@od/shared/types';
import {
  ChevronLeft,
  ChevronRight,
  Close,
  IconButton,
  Text,
  useMotion,
  useTheme,
} from '@od/ui';
import { Image } from 'expo-image';
...
